# yt-dlp-docker

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  update.py  yt-dlp
.github/workflows/: cron.yaml  publish.yaml
ci/: update.py
